--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omit.js",
+  "name": "hbw.omit.js",
   "version": "2.0.2",
   "description": "Utility function to create a shallow copy of an object which had dropped some fields.",
   "main": "lib/index.js",
@@ -18,7 +18,7 @@
     "gh-pages": "father doc deploy",
     "prepublishOnly": "npm run compile && np --yolo --no-publish",
     "lint": "eslint .",
-    "test": "father test",
+    "test": "jest",
     "coverage": "father test --coverage"
   },
   "repository": {
@@ -36,10 +36,15 @@
   },
   "homepage": "https://github.com/benjycui/omit.js#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "@umijs/fabric": "^2.2.2",
     "assert": "^1.4.1",
+    "babel-jest": "^28.1.3",
     "eslint": "^7.4.0",
     "father": "^2.29.5",
+    "jest": "^28.1.3",
     "np": "^6.3.1",
     "rc-tools": "^6.3.3"
   }
